force-app/main/default/objects/Account_To_Users__c/Account_To_Users__c.object-meta.xml
<CustomObject>
    <description>Custom Object to map accounts with users using LinkType (Similar to AccountTeam but without any permissions)</description>
    <label>Account To Users</label>
    <nameField>
        <displayFormat>ATU-{000000}</displayFormat>
        <label>Account To Users Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account To Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>