force-app/main/default/objects/Account_To_Users__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account Name</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account To Users</relationshipLabel>
    <relationshipName>Account_To_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>