force-app/main/default/objects/Account_To_Users__c/fields/Disable_Account_User_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Disable_Account_User_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify if the account and user relationship disabled or active. 
Set to TRUE instead of deleting the record. To be used to perform the backend logic efficiently.</description>
    <label>Disable Account User Relationship</label>
    <type>Checkbox</type>
</CustomField>