force-app/main/default/objects/Account_To_Users__c/fields/Old_User__c.field-meta.xml
<CustomField>
    <fullName>Old_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture the old user if user is replaced</description>
    <label>Old User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_To_Users1</relationshipName>
    <type>Lookup</type>
</CustomField>