force-app/main/default/objects/Account_To_Users__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <description>Defines the type of relation of the user and account.</description>
    <label>Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National Partner Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>