force-app/main/default/objects/Account_To_Users__c/fields/Sync_NationalPartnerManager__c.field-meta.xml
<CustomField>
    <fullName>Sync_NationalPartnerManager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True then NationalPartnerManagers will be synced to all related open opportunities via batch job - SAL24-679</description>
    <label>Sync NationalPartnerManager</label>
    <type>Checkbox</type>
</CustomField>