force-app/main/default/objects/Account_To_Users__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique text field (AccountId-UserId-RelationshipType) - to avoid duplicate records</description>
    <label>Unique Identifier</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>