force-app/main/default/objects/Account_To_Users__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Ops</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User</description>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_To_Users</relationshipName>
    <type>Lookup</type>
</CustomField>