force-app/main/default/objects/Account_To_Users__c/validationRules/Restrict_Relationship_Type_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Relationship_Type_Change</fullName>
    <active>true</active>
    <description>To Restrict Relationship Type Change</description>
    <errorConditionFormula>ISCHANGED(Relationship_Type__c)</errorConditionFormula>
    <errorDisplayField>Relationship_Type__c</errorDisplayField>
    <errorMessage>Relationship Type can not be changed once enter. Please create new record with different Relationship Type.</errorMessage>
</ValidationRule>