force-app/main/default/objects/Account_To_Users__c/validationRules/User_Can_Not_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Can_Not_Be_Blank</fullName>
    <active>true</active>
    <description>User field can not be blank</description>
    <errorConditionFormula>ISBLANK(User__c)</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>User is required. Please enter.</errorMessage>
</ValidationRule>