force-app/main/default/objects/Account_To_Users__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>User__c</columns>
    <columns>Relationship_Type__c</columns>
    <columns>Disable_Account_User_Relationship__c</columns>
    <columns>Sync_NationalPartnerManager__c</columns>
    <columns>Old_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>